--- a/css/style.css
+++ b/css/style.css
@@ -596,3 +596,49 @@ a {
   color: white;
   font-weight: 400;
 }
+
+.map .mapDes {
+  height: 400px;
+  background: url("../img/Map.jpg") no-repeat 50%/cover;
+  position: relative;
+}
+.map .mapDes .mapInfo {
+  position: absolute;
+  left: 21%;
+  top: 50%;
+  transform: translateY(-50%);
+  padding: 33px 63px 33px 40px;
+  background-color: white;
+}
+@media (max-width: 900px) {
+  .map .mapDes .mapInfo {
+    padding: 20px 25px 20px 25px;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+  }
+  .map .mapDes .mapInfo p {
+    max-width: 180px;
+  }
+}
+@media (max-width: 900px) and (max-width: 450px) {
+  .map .mapDes .mapInfo {
+    font-size: 11px;
+  }
+}
+.map .mapDes .mapInfo p {
+  padding: 0;
+  margin: 0;
+  max-width: 230px;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+  color: #161918;
+  font-size: 13px;
+  color: #010101;
+}
+.map .mapDes .mapInfo p:not(:first-child) {
+  padding-top: 22px;
+}
+.map .mapDes .mapInfo p:first-child {
+  line-height: 20px;
+}
