--- a/scss/style.scss
+++ b/scss/style.scss
@@ -609,3 +609,55 @@ line-height: 20px;
         font-weight: 400;
     }
 }
+
+.map {
+    .mapDes {
+        height: 400px;
+        background: url("../img/Map.jpg") no-repeat 50% /cover;
+        position: relative;
+
+        
+        .mapInfo {
+            position: absolute;
+            left:21%;
+            top: 50%;
+            transform: translateY(-50%);
+            padding: 33px 63px 33px 40px;
+            background-color: white;
+                
+            @media (max-width:900px) {
+                    padding: 20px 25px 20px 25px ;
+                    top:50%;
+                    left: 50%;
+                    transform: translateX(-50%) translateY(-50%);
+
+                    p {
+                        max-width: 180px;
+                    }
+
+                    @media (max-width: 450px) {
+                        font-size: 11px;
+                        
+                    }
+                }            
+            
+           p {
+            padding: 0;
+            margin: 0;  
+            max-width: 230px;
+            
+            @include NormalFont();
+            font-size: 13px;
+            color: #010101;
+            
+            &:not(:first-child) {
+                padding-top: 22px;
+            }
+
+            &:first-child {
+                line-height: 20px;
+            } 
+           }
+        }
+    }
+}
