--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 body {
   padding: 0;
   margin: 0 auto;
@@ -10,9 +11,14 @@ a {
 
 .Header {
   position: relative;
-  background: url("../img/background_top.png") 50% 50%/cover;
+  background: url("../img/background_top.png") 40% 50%/cover;
   margin: 0 auto;
   padding: 0 10px;
+}
+@media (max-width: 550px) {
+  .Header .slide-left, .Header .slide-right {
+    display: none;
+  }
 }
 .Header .slide-left {
   position: absolute;
@@ -83,6 +89,11 @@ a {
 .header-menu p:hover span {
   color: black;
 }
+@media (max-width: 450px) {
+  .header-menu .share, .header-menu .search, .header-menu .shop {
+    display: none;
+  }
+}
 
 .menu, .share {
   padding-right: 20px;
@@ -93,13 +104,20 @@ a {
 }
 
 .menu-list {
+  max-width: 100%;
   padding-top: 25px;
-  padding-bottom: 220px;
+}
+@media (max-width: 620px) {
+  .menu-list {
+    display: none;
+  }
 }
 .menu-list ul {
   display: flex;
+  flex-wrap: wrap;
   flex-direction: row;
   list-style: none;
+  max-width: 740px;
   justify-content: space-between;
   margin: 0 auto;
   padding: 0 10px;
@@ -111,6 +129,10 @@ a {
   font-size: 15px;
   transition: 0.5s ease;
 }
+.menu-list ul a {
+  padding-left: 15px;
+  padding-bottom: 10px;
+}
 .menu-list ul li:hover {
   color: #5f5f5f;
   font-weight: 800;
@@ -119,13 +141,33 @@ a {
 .container_description {
   position: relative;
   max-width: 1100px;
+  display: flex;
   margin: 0 auto;
 }
+@media (max-width: 1300px) {
+  .container_description {
+    justify-content: center;
+  }
+  .container_description .text {
+    align-content: center;
+    text-align: center;
+  }
+  .container_description button {
+    margin: 0 auto;
+  }
+}
 .container_description .text {
+  padding-top: 220px;
   max-width: 365px;
   display: flex;
   flex-direction: column;
   padding-bottom: 350px;
+}
+@media (max-width: 620px) {
+  .container_description .text {
+    padding-top: 110px;
+    padding-bottom: 175px;
+  }
 }
 .container_description .text h1 {
   font-family: "Montserrat", sans-serif;
@@ -189,6 +231,24 @@ a {
   padding-top: 45px;
   padding-bottom: 45px;
 }
+@media (max-width: 750px) {
+  .clothers .site__info .delivery {
+    margin: 0 20px;
+  }
+}
+@media (max-width: 550px) {
+  .clothers .site__info {
+    flex-direction: column;
+    align-items: center;
+  }
+  .clothers .site__info .delivery {
+    margin: 0;
+    margin-bottom: 30px;
+  }
+  .clothers .site__info div {
+    margin-bottom: 30px;
+  }
+}
 .clothers .site__info div {
   display: flex;
   flex-direction: column;
@@ -221,13 +281,20 @@ a {
   align-content: center;
   grid-template-columns: repeat(auto-fill, 440px);
   padding-bottom: 125px;
+  image-orientation: from-image;
+}
+@media (max-width: 441px) {
+  .clothers .categories {
+    grid-template-columns: repeat(auto-fill, 320px);
+  }
 }
 .clothers .categories div {
+  text-align: center;
   position: relative;
-  max-width: 440px;
   width: 100%;
+  /* Ширина изображений */
   height: 440px;
-  margin-bottom: 30px;
+  /* Высота изображении */
 }
 .clothers .categories div .clother__button {
   position: absolute;
@@ -251,19 +318,19 @@ a {
 }
 
 .dresses {
-  background: url("../img/Woman_1.jpg") no-repeat 100%;
+  background: url("../img/Woman_1.jpg") no-repeat 50% 100%/cover;
 }
 
 .blouses {
-  background: url("../img/Woman_2.jpg") no-repeat 100%;
+  background: url("../img/Woman_2.jpg") no-repeat 50% 100%/cover;
 }
 
 .t-shorts {
-  background: url("../img/Woman_3.jpg") no-repeat 100%;
+  background: url("../img/Woman_3.jpg") no-repeat 50% 100%/cover;
 }
 
 .outerwear {
-  background: url("../img/Woman_4.jpg") no-repeat 100%;
+  background: url("../img/Woman_4.jpg") no-repeat 50% 100%/cover;
 }
 
 .text__part {
@@ -332,8 +399,8 @@ a {
 .text__part .catalog__button:hover::after {
   border-top-color: black;
 }
-.text__part .catalog__button:nth-child(2) {
-  margin: 0 20px;
+.text__part .catalog__button {
+  margin: 20px 10px;
 }
 
 .catalog {
@@ -342,6 +409,18 @@ a {
   justify-content: center;
   grid-gap: 38px 20px;
   grid-template-columns: repeat(auto-fill, 348px);
+}
+@media (max-width: 349px) {
+  .catalog {
+    grid-template-columns: repeat(auto-fill, 320px);
+  }
+  .catalog div .counter {
+    max-width: 320px;
+    height: auto;
+  }
+  .catalog img {
+    width: 100%;
+  }
 }
 .catalog .idiot_get_bug {
   display: flex;
@@ -405,6 +484,7 @@ a {
   height: 464px;
   border: 2px solid #f6f6f6;
   position: relative;
+  margin: 0 auto;
   transition: 0.5s ease;
 }
 .catalog .counter img {
@@ -482,8 +562,16 @@ a {
   display: flex;
   flex-direction: row;
 }
+@media (max-width: 480px) {
+  .bags {
+    flex-direction: column-reverse;
+  }
+  .bags .bagDescrip {
+    margin-bottom: 50px;
+  }
+}
 .bags .bagDescrip {
-  width: 50%;
+  min-width: 50%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -497,6 +585,8 @@ a {
   font-size: 42px;
   padding-bottom: 32px;
   position: relative;
+  overflow-wrap: break-word;
+  text-align: center;
 }
 .bags .bagDescrip h2::after {
   position: absolute;
@@ -508,6 +598,8 @@ a {
   transform: translateX(-50%);
 }
 .bags .bagDescrip p {
+  padding-left: 25px;
+  padding-right: 25px;
   max-width: 495px;
   padding-top: 37px;
   padding-bottom: 47px;
@@ -531,6 +623,12 @@ a {
   border: 1px solid black;
   transition: 0.5s ease;
 }
+@media (max-width: 600px) {
+  .bags .bagDescrip button {
+    padding: 20px 30px;
+    font-size: 11px;
+  }
+}
 .bags .bagDescrip button:hover {
   background-color: black;
   box-shadow: black 1px 1px 5px;
@@ -538,7 +636,7 @@ a {
   border-color: white;
 }
 .bags .bagImage {
-  width: 50%;
+  min-width: 50%;
   height: 630px;
   background: url("../img/bag_and_shoes.jpg") 50% 50%/cover;
   transition: 0.5s ease;
@@ -621,12 +719,12 @@ a {
     max-width: 180px;
   }
 }
-@media (max-width: 900px) and (max-width: 450px) {
+@media (max-width: 450px) {
   .map .mapDes .mapInfo {
     font-size: 11px;
   }
 }
-.map .mapDes .mapInfo p {
+.map .mapDes p {
   padding: 0;
   margin: 0;
   max-width: 230px;
@@ -636,9 +734,9 @@ a {
   font-size: 13px;
   color: #010101;
 }
-.map .mapDes .mapInfo p:not(:first-child) {
+.map .mapDes p:not(:first-child) {
   padding-top: 22px;
 }
-.map .mapDes .mapInfo p:first-child {
+.map .mapDes p:first-child {
   line-height: 20px;
 }
